This commit refactors the entire yearly tuition management functionality to simplify the data processing flow and increase the separation between layers in the MVC architecture. At the DAO layer, two more methods using JPQL are added to categorize data directly from the query: getTuitionsWithFeeByYear retrieves the list of subjects with valid tuition fees, and getTuitionsWithoutFeeByYear retrieves the list of subjects with no tuition fees or zero tuition fees. This eliminates the need for filtering in the view, allowing the data to be pre-normalized when returned. At the Controller layer, instead of calling a general list, the listSubjects method has been modified to call two new functions separately, then put the results into the model as two separate lists tuitionWithFee and tuitionWithoutFee. Thanks to that, the view only needs to use th:each to display the data, without adding th:if conditions in the loop. In the view (AdminSubjectsList.html), the two display tables were rewritten to directly use the two new lists, making the HTML cleaner and easier to maintain. Each table has its own form and save button to update tuition fees. The total number of subjects is calculated from the sum of the two lists. These changes reduce template complexity, improve rendering performance, and ensure compliance with the MVC separation of responsibilities, making the system cleaner, more maintainable, and more extensible in the future.